k8s/deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weddingbook-dpmt
  labels:
    app: weddingbook
    type: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weddingbook
  template:
    metadata:
      labels:
        app: weddingbook
        type: web
    spec:
      containers:
      - name: weddingbook-dpmt
        image: 889859566884.dkr.ecr.eu-west-1.amazonaws.com/asergio:weddingbook
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8081
