k8s/ingress_template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weddingbook-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: asergio-weddingbook.qa.crossknowledge.net
spec:
  rules:
  - host: asergio-weddingbook.qa.crossknowledge.net
    http:
      paths:
      - backend:
          serviceName: weddingbook-svc
          servicePort: 80
